[package]
name = "KetherServerDaemon"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Dominik Adrian Grzywak"]
rust-version = "1.88"

[dependencies]
# Existing dependency
sourcepak = { version = "0.3.0", features = ["mem-map"] }

# Async runtime
tokio = { version = "1.x", features = ["full"] }
reedline = "0.46"
crossterm = "0.29"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# HTTP server
axum = { version = "0.8", features = ["json"] }

# Configuration
serde = { version = "1.x", features = ["derive"] }
serde_json = "1.x"
toml = { version = "0.8", features = ["parse"] }

# Logging
tracing = "0.x"
tracing-subscriber = { version = "0.x", features = ["env-filter", "ansi", "json"] }

# Filesystem watching
notify = "8.x"

# Error handling
thiserror = "1.x"
anyhow = "1.x"

# URL parsing
url = "2.5"

# Async traits
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# ZIP extraction
zip = "0.6"

# Regex for parsing VPK metadata
regex = "1.10"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
tempfile = "3.10"
futures-util = "0.3"
md5 = "0.7"

# Steam Workshop integration
steam-vent = "0.5"
steam-vent-proto-steam = "0.5.2"

[dev-dependencies]
# HTTP server mocking for download tests
mockito = "1.2"

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
codegen-units = 1
lto = true
strip = true

# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
